--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint . --ext .js,.ts",
     "prepack": "npm-run-all build",
     "start": "cross-env TARGET='debug' rollup --config --watch",
+    "test": "cypress run-ct",
     "watch": "rollup --config --watch"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "@babel/plugin-transform-runtime": "^7.16.10",
     "@babel/preset-env": "^7.16.11",
     "@babel/runtime": "^7.16.7",
+    "@cypress/webpack-dev-server": "^1.8.4",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^18.1.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
@@ -30,13 +32,18 @@
     "@typescript-eslint/parser": "^5.19.0",
     "asyncify-wasm": "^1.2.1",
     "cross-env": "^7.0.3",
+    "cypress": "^9.6.1",
     "eslint": "^8.13.0",
+    "html-webpack-plugin": "^5.5.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.70.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.2",
     "rollup-plugin-web-worker-loader": "^1.6.1",
-    "typescript": "^4.6.3"
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.6.3",
+    "webpack": "^5.72.1",
+    "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
     "commander": "^9.2.0"
