--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
       "sourceMap": true,
       "strict": false,
       "target": "esnext",
-      "types": ["cypress"],
+      "types": [],
     },
-    "exclude": ["node_modules", "dist"]
+    "exclude": ["node_modules", "dist", "test", "cypress"]
   }
