--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@picovoice/web-utils",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "Picovoice web utility functions",
   "author": "Picovoice",
   "license": "Apache-2.0",
@@ -36,6 +36,7 @@
     "eslint": "^8.13.0",
     "html-webpack-plugin": "^5.5.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
     "rollup": "^2.70.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.2",
