--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@rollup/pluginutils": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
+    "@webgpu/types": "^0.1.40",
     "asyncify-wasm": "^1.2.1",
     "cross-env": "^7.0.3",
     "cypress": "^12.8.1",
@@ -43,7 +44,7 @@
     "rollup-plugin-typescript2": "^0.34.1",
     "rollup-plugin-web-worker-loader": "^1.6.1",
     "tslib": "^2.5.0",
-    "typescript": "^4.9.5"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "commander": "^10.0.1"
