--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "sourceMap": true,
     "strict": true,
     "target": "es6",
-    "types": ["node"]
+    "types": ["node", "@webgpu/types"]
   },
   "include": ["src"],
   "exclude": ["node_modules"]
