--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "rollup-plugin-typescript2": "^0.34.1",
     "rollup-plugin-web-worker-loader": "^1.6.1",
     "tslib": "^2.5.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "wasm-feature-detect": "^1.6.1"
   },
   "dependencies": {
     "commander": "^10.0.1"
